Fix language logo alignment

--- a/Style.css
+++ b/Style.css
@@ -168,6 +168,8 @@ body {
             width: 100vw; max-width: 100%;                                                                      ;
             right: 0;
             background-position-y: center;
+            background-position-x: center;
+            background-size: 50vw;
         }
 
         /* Page contents background */
